--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,6 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.about') }}">About</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main.journal_entries') }}">Journal Entries</a>
+                    </li>
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.account') }}">Account</a>
