--- a/app/templates/create_journal_entry.html
+++ b/app/templates/create_journal_entry.html
@@ -13,6 +13,10 @@
                 {{ form.content.label(class="form-control-label") }}
                 {{ form.content(class="form-control form-control-lg", rows="5") }}
             </div>
+            <div class="form-check mb-3">
+                {{ form.is_public(class="form-check-input") }}
+                {{ form.is_public.label(class="form-check-label") }}
+            </div>
             <div class="form-group">
                 {{ form.submit(class="btn btn-primary btn-lg btn-block") }}
             </div>
