--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -9,6 +9,7 @@
 
     <!-- Delete Account Form -->
     <form method="POST" action="{{ url_for('main.delete_account') }}">
+        {{ form.hidden_tag() }}
         <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete your account? This action cannot be undone.');">
             Delete Account
         </button>
