Updated home.html to correctly display public journal entries with improved design and truncation logic.

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,8 +10,11 @@
                 {% for entry in public_entries %}
                     <li class="list-group-item">
                         <h5>{{ entry.title }}</h5>
-                        <p>{{ entry.content[:150] }}...</p> 
-                        <small>by {{ entry.author.username }} on {{ entry.date_posted.strftime('%Y-%m-%d') }}</small>
+                        <p>{{ entry.content | truncate(150) }}</p> <!-- Use truncate filter for cleaner truncation -->
+                        
+                        <!-- Handle the case where entry.author might be missing -->
+                        <small>by {{ entry.author.username if entry.author else 'Unknown' }} on {{ entry.date_posted.strftime('%Y-%m-%d') }}</small>
+
                         <a href="{{ url_for('main.journal_entry', entry_id=entry.id) }}" class="btn btn-link">Read More</a>
                     </li>
                 {% endfor %}
