--- a/app/templates/login_modal.html
+++ b/app/templates/login_modal.html
@@ -1,22 +1,21 @@
 <form method="POST" action="{{ url_for('main.login') }}">
     {{ form.hidden_tag() }}
     <div class="form-group">
-        {{ form.email.label(class="form-label") }}
-        {{ form.email(class="form-control") }}
+        {{ form.email(class_="form-control", id="emailInput", aria_describedby="emailHelp") }}
         {% for error in form.email.errors %}
             <span class="text-danger">{{ error }}</span>
         {% endfor %}
     </div>
     <div class="form-group">
-        {{ form.password.label(class="form-label") }}
-        {{ form.password(class="form-control") }}
+        {{ form.password.label(class_="form-label") }}
+        {{ form.password(class_="form-control") }}
         {% for error in form.password.errors %}
             <span class="text-danger">{{ error }}</span>
         {% endfor %}
     </div>
     <div class="form-group form-check">
-        {{ form.remember(class="form-check-input") }}
-        {{ form.remember.label(class="form-check-label") }}
+        {{ form.remember(class_="form-check-input") }}
+        {{ form.remember.label(class_="form-check-label") }}
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
