--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container mt-5">
-    <h1>Account Details</h1>
+<div class="content-section">
+    <h1 class="h3 mb-3 font-weight-normal">Account Details</h1>
     <hr>
     <p><strong>Username:</strong> {{ current_user.username }}</p>
     <p><strong>Email:</strong> {{ current_user.email }}</p>
