Complete redesign: Updated base structure, navbar with icons, added footer, styled home page, improved responsiveness and typography.

--- a/app/templates/_navbar.html
+++ b/app/templates/_navbar.html
@@ -1,7 +1,8 @@
-<!-- _navbar.html -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="{{ url_for('main.home') }}">Travel Journal</a>
+        <a class="navbar-brand" href="{{ url_for('main.home') }}">
+            <i class="fas fa-globe"></i> Travel Journal
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
